# lockbox

./: .gitattributes  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  Makefile  README.md  dev_requirements.txt  devenv.nix  flake.nix  lockbox  pyproject.toml  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/workflows/: pr.yml  publish.yml
scripts/: encrypt_file  lockbox  lockbox.py
src/encrypt_file/: _version.py  main.py
src/lockbox/: __init__.py  _version.py  cli.py  main.py
tests/: conftest.py
tests/functional/: test_functional.py
tests/unit/: test_cli.py  test_main.py
