[tool.poetry]
name = "lockbox"
version = "0.1.0"
description = ""
authors = ["Kevin Yokley <kyokley2@gmail.com>"]
license = "MIT"
packages = [
    { include = "lockbox", from = "src" },
    { include = "scripts" },
]

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^43.0.1"
qrcode-terminal = "^0.8"
docopt = "^0.6.2"
blessings = "^1.7"

[tool.poetry.scripts]
lockbox = { callable = "scripts.lockbox:run", extras = ["scripts"] }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pdbpp = "^0.10.3"
bpython = "^0.24"
mock = "^5.0.2"
bandit = "^1.7.5"
ruff = "^0.0.276"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
select = ["E", "F"]
ignore = ["E501"]
