[project]
name = "lockbox"
version = "0.1.0"
description = "Simple cryptographic CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blessings>=1.7",
    "cryptography>=44.0.2",
    "docopt>=0.6.2",
    "qrcode-terminal>=0.8",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "bpython>=0.25",
    "pdbpp>=0.11.6",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]
